--- a/index.html
+++ b/index.html
@@ -5,69 +5,120 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guided tour</title>
-    <link rel="shortcat icon" href="img/favicon.ico" type="image/x-icon">
+    <title>Guided Tour</title>
+    <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="img/car-rentals-icon.png" type="image/png">
 </head>
 
 <body>
     <header class="header">
         <nav class="header__nav">
             <div class="header__logo-container">
-                <img width="188" src="img/logo.png" class="header__logo" alt="logo">
+                <img width="188" src="img/norway-logo.png" class="header__logo" alt="Norway Logo">
             </div>
             <ul class="header__menu">
                 <li class="header__menu-item"><a href="#about">About Us</a></li>
                 <li class="header__menu-item"><a href="#places">Itinerary</a></li>
                 <li class="header__menu-item"><a href="#testimonials">Testimonials</a></li>
-                <li class="header__menu-item"><a href="#about">Blog</a></li>
-                <li class="header__menu-item"><a href="#about">Contact</a></li>
-                <li class="header__menu-item button"><a href="#about">Join Us</a></li>
+                <li class="header__menu-item"><a href="#blog">Blog</a></li>
+                <li class="header__menu-item"><a href="#contacts">Contacts</a></li>
+                <li class="header__menu-item button"><a href="#contact-form">Join Us</a></li>
             </ul>
         </nav>
         <div class="header__banner">
-            <p class="header__suptitle"></p>
-            <span class="divider">━</span>YOUR PERFECT JOURNEY TO
+            <p class="header__subtitle">
+                <span class="divider">━</span>YOUR PERFECT JOURNEY TO
+            </p>
             <h1 class="header__title">Norway</h1>
             <aside class="header__aside">
-                <img width="200" src="img/norway.jfif" alt="river">
+                <img width="200" src="img/river.jfif" alt="River">
             </aside>
         </div>
     </header>
-    <main>
+    <main class="main">
         <div class="promo">
             <div class="promo__food">
-                <p class="promo__food-sub">BUTCHERS, ROYAL CANIN, PEDIGREE</p>
+                <p class="promo__food-subtitle">
+                    BUTCHERS, ROYAL CANIN, PEDIGREE
+                </p>
+                <p class="promo__food-title">
+                    Best-Quality Food for Pets
+                </p>
+                <a href="#food" class="promo__food-link button">Buy Now</a>
             </div>
             <div class="promo__stuff">
-                <p class="prpmp_stuff-sub">Get 10% Off for Cats & Dogs Stuff</p>
-                <a href="#food" class="promo__food-link" burron>Byu now</a>
+
             </div>
         </div>
         <section class="categories">
-            <h2 class="categories__title">Any Products for Any Pets</h2>
-            <img width="50" src="img/завантаження.svg" alt="bone">
-            <p class="categories__subtitle">Best picks for your beloved companions only in Happy Paw
-
+            <h2 class="categories__title">
+                Any Products for Any Pets
+            </h2>
+            <img width="50" src="img/bone.svg" alt="Bone">
+            <p class="categories__subtitle">
+                Best picks for your beloved companions only in Happy Paw.
             </p>
-            <div class="cateroies__carousel">
-                <article class="cateroies__carousel-item">
-                    <img width="200" src="img/categories-car/cat.png" alt="Cat">
+            <div class="categories__carousel">
+                <article class="categories__carousel-item">
+                    <img width="100" src="img/categories-carousel/rabbit.png" class="categories__carousel-item-image"
+                        alt="Rabbit">
                     <h3 class="categories__carousel-item-title">For Rabbits <span>→</span></h3>
-                    <p>Food • Treats • Hay • Cages • Litter & Bedding • Harnesses • Toys • Odor Removers</p>
+                    <p class="categories__carousel-item-description">Food • Treats • Hay • Cages • Litter & Bedding •
+                        Harnesses • Toys • Odor Removers • </p>
                 </article>
-                <article class="cateroies__carousel-item">
-                    <img width="200" src="img/categories-car/cat.png" alt="Cat">
+                <article class="categories__carousel-item">
+                    <img width="100" src="img/categories-carousel/rabbit.png" class="categories__carousel-item-image"
+                        alt="Rabbit">
                     <h3 class="categories__carousel-item-title">For Rabbits <span>→</span></h3>
-                    <p>Food • Treats • Hay • Cages • Litter & Bedding • Harnesses • Toys • Odor Removers</p>
+                    <p class="categories__carousel-item-description">Food • Treats • Hay • Cages • Litter & Bedding •
+                        Harnesses • Toys • Odor Removers • </p>
                 </article>
-                <article class="cateroies__carousel-item">
-                    <img width="200" src="img/categories-car/cat.png" alt="Cat">
+                <article class="categories__carousel-item">
+                    <img width="100" src="img/categories-carousel/rabbit.png" class="categories__carousel-item-image"
+                        alt="Rabbit">
                     <h3 class="categories__carousel-item-title">For Rabbits <span>→</span></h3>
-                    <p class="categories__carousel-item-description">Food • Treats • Hay • Cages • Litter & Bedding • Harnesses • Toys • Odor Removers •</p>
+                    <p class="categories__carousel-item-description">Food • Treats • Hay • Cages • Litter & Bedding •
+                        Harnesses • Toys • Odor Removers • </p>
+                </article>
+                <article class="categories__carousel-item">
+                    <img width="100" src="img/categories-carousel/rabbit.png" class="categories__carousel-item-image"
+                        alt="Rabbit">
+                    <h3 class="categories__carousel-item-title">For Rabbits <span>→</span></h3>
+                    <p class="categories__carousel-item-description">Food • Treats • Hay • Cages • Litter & Bedding •
+                        Harnesses • Toys • Odor Removers • </p>
                 </article>
             </div>
         </section>
-
+        <section class="contacts">
+            <div class="contacts__address">
+                <h2>Contacts</h2>
+                <div>
+                    <h3>Address</h3>
+                    <p>84-4 127th St, Kew Gardens, NY 11415, USA</p>
+                </div>
+                <div>
+                    <h3>Hours</h3>
+                    <p>Monday - Saturday: 11 AM - 9 PM Sunday: 11 AM - 7 PM</p>
+                </div>
+                <div>
+                    <h3>Contacts</h3>
+                    <p>+1 (234) 567 89 00 plantland@email.com</p>
+                </div>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d20586.17349034308!2d24.040136891333006!3d49.83735241995784!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x473add64f46130af%3A0xb8fa7f852817fcdc!2sPotocki%20Palace!5e0!3m2!1sen!2sua!4v1664990562430!5m2!1sen!2sua"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <form class="contacts__form" action="https://formspree.io/f/xeqpelev" method="POST">
+                <h2>Send a request</h2>
+                <p>If you want to buy a plant, visit our offline store or the greenhouse, leave us a message.</p>
+                <input type="text" placeholder="Enter your full name*" required name="client-name">
+                <input type="tel" placeholder="Enter your phone number*" required name="phone">
+                <input type="email" placeholder="Enter your email*" required name="email">
+                <input type="text" placeholder="Your message" name="message">
+                <input type="submit" value="Submit">
+            </form>
+        </section>
     </main>
     <footer>
 
